--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,11 @@ license = {text = "MIT"}
 requires = ["setuptools>=65.0.0"]
 build-backend = "setuptools.build_meta"
 
-# Configuración mínima para pytest (solo pruebas básicas)
 [tool.pytest.ini_options]
+pythonpath = ["src"]  # ¡Esta línea es crucial!
 testpaths = ["tests"]
 python_files = "test_*.py"
-addopts = "--verbose"
+addopts = "--verbose --cov=src --cov-report=term-missing"
+
+[tool.setuptools.packages]
+find = {}  # Habilita búsqueda automática de paquetes
