--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
+      - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
@@ -14,7 +14,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest pytest-cov ruff
       - name: Run linter (Ruff)
         run: ruff check src/ tests/
       - name: Run tests with coverage
@@ -25,10 +24,7 @@ jobs:
             --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-      - name: Verify coverage
+        if: success()
+      - name: Verify minimum coverage (80%)
         run: |
-          python -m pip install coverage
-          coverage report --fail-under=80
+          python -m coverage report --fail-under=80
