--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,18 @@
-anaconda==0.0.1.1
-annotated-types==0.7.0
-anyio==4.4.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astroid==3.2.4
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.2.0
-autopep8==2.0.4
-Babel==2.15.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-certifi==2024.6.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.8
-colorama==0.4.6
-comm==0.2.2
-contourpy==1.2.1
-cycler==0.12.1
-debugpy==1.8.2
-decorator==4.4.2
-defusedxml==0.7.1
-dill==0.3.8
-docstring-to-markdown==0.15
-executing==2.0.1
-fastjsonschema==2.20.0
-ffmpeg-python==0.2.0
-flake8==7.1.1
-fonttools==4.53.1
-fqdn==1.5.1
-future==1.0.0
-greenlet==3.1.1
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.7
-imageio==2.34.2
-imageio-ffmpeg==0.5.1
-importlib_metadata==8.4.0
-iniconfig==2.1.0
-ipykernel==6.29.5
-ipython==8.26.0
-ipywidgets==8.1.3
-isoduration==20.11.0
-isort==5.13.2
-jedi==0.19.1
-Jinja2==3.1.4
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-jupyter_server==2.14.1
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.3
-jupyterlab-lsp==5.1.0
-jupyterlab_code_formatter==3.0.2
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.2
-jupyterlab_widgets==3.0.11
-jupytext==1.16.4
-kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-mccabe==0.7.0
-mdit-py-plugins==0.4.2
-mdurl==0.1.2
-mistune==3.0.2
-moviepy==1.0.3
-mpmath==1.3.0
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.4.2
-notebook==7.2.1
-notebook_shim==0.2.4
-numpy==2.0.0
-overrides==7.7.0
-packaging==24.1
-pandas==2.2.2
-pandocfilters==1.5.1
-parso==0.8.4
-pillow==10.4.0
-platformdirs==4.2.2
-pluggy==1.5.0
-proglog==0.1.10
-prometheus_client==0.20.0
-prompt_toolkit==3.0.47
-psutil==6.0.0
-pure-eval==0.2.2
-pycodestyle==2.12.1
-pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
-pydocstyle==6.3.0
-pyflakes==3.2.0
-pygame==2.6.1
-Pygments==2.18.0
-pylint==3.2.7
-pyparsing==3.1.2
+# Testing & Quality
 pytest==8.3.5
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-python-lsp-jsonrpc==1.1.2
-python-lsp-server==1.12.0
-pytoolconfig==1.3.1
-pytube==15.0.0
-pytz==2024.1
-PyWavelets==1.7.0
-pywin32==306
-pywinpty==2.0.13
-PyYAML==6.0.1
-pyzmq==26.0.3
-qtconsole==5.5.2
-QtPy==2.4.1
-referencing==0.35.1
-requests==2.32.3
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rope==1.13.0
-rpds-py==0.18.1
-ruff==0.11.7
-scipy==1.14.1
-seaborn==0.13.2
-Send2Trash==1.8.3
-setuptools==70.2.0
-six==1.16.0
-sniffio==1.3.1
-snowballstemmer==2.2.0
-soupsieve==2.5
-spicy==0.16.0
-SQLAlchemy==2.0.40
-stack-data==0.6.3
-starlette==0.46.1
-sympy==1.13.2
-tabulate==0.9.0
-terminado==0.18.1
-tinycss2==1.3.0
-tomli==2.0.1
-tomlkit==0.13.2
-tornado==6.4.1
-tqdm==4.66.4
-traitlets==5.14.3
-types-python-dateutil==2.9.0.20240316
-typing-inspection==0.4.0
+pytest-cov==4.1.0
+ruff==0.4.4
+coverage==7.5.3
+
+# Core Dependencies
+networkx==3.4.2
+rich==13.7.1
+textdistance==4.6.1
+python-dotenv==1.0.1
+click==8.1.8
 typing_extensions==4.13.1
-tzdata==2024.1
-ujson==5.10.0
-uri-template==1.3.0
-urllib3==2.2.2
-wcwidth==0.2.13
-webcolors==24.6.0
-webencodings==0.5.1
-websocket-client==1.8.0
-whatthepatch==1.0.6
-widgetsnbextension==4.0.11
-yapf==0.40.2
-zipp==3.20.1
+gitpython==3.1.43
+
+# CLI/TUI Essentials
+pygtrie==2.5.0
+curses-menu==0.9.0  # Versión actualizada
