RX-02 feat: add object scanner with packfile support and BDD test
- Implements read_loose() and read_packfile() with CRC validation
- Adds BDD scenario for corrupt blob detection
- Includes fixtures for testing (corrupt-blob.git, pack-corrupt.git)

Closes #RX-02

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,18 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       - name: Run linter (Ruff)
-        run: ruff check src/ tests/
+        run: |
+          ruff check src/ tests/ --fix
+          ruff check src/ tests/ --exit-non-zero-on-fix
+      - name: Run type checker (mypy)
+        run: mypy src/
       - name: Run tests with coverage
         run: |
           pytest tests/ \
             --verbose \
             --cov=src \
-            --cov-report=xml
+            --cov-report=xml \
+            --cov-report=term
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         if: success()
